--- a/final/Source Code Package/INSTALL
+++ b/final/Source Code Package/INSTALL
@@ -6,15 +6,25 @@ To install:
      -the object files will be generated in the Chat_V1.0_src/src/ directory
 4. Move one directory up to Chat_V1.0_src with command "cd .."
 5. Compile executables using upper-level Makefile 
-6. Run command "make all" again 
+6. Run command "make all" again
      -the executable files will be generated in the Chat_V1.0_src/bin/ directory
+
+To install tests:
+1. Go to Chat_V1.0_src/src/
+2. Compile object files using lower-level Makefile 
+3. Run command "make all"
+     -the debug object files will be generated in the Chat_V1.0_src/src/ directory
+4. Move one directory up to Chat_V1.0_src with command "cd .."
+5. Compile executables using upper-level Makefile 
+6. Run command "make test" again
+     -the test executable files will be generated in the Chat_V1.0_src/bin/ directory
 
 *Server must be up and running before users can connect. And the server must be 
 running on hostname: "zuma.eecs.uci.edu".
 To run server:
 1. First log into hostname: "zuma.eecs.uci.edu" with your EECS account
 2. Go to Chat_V1.0_src/bin/ directory with command "cd bin"
-3. Run server executable using command "./ServerGUI"
+3. Run server executable using command "./Server"
       *hostname & port no. do not need to be specified in this command
 
 To run clients:
@@ -25,11 +35,10 @@ To run clients:
 5. Since "Create Account" is not fully functional, use one of our 
      two provided accounts,
      
-	Username: user1			Username: user2
-	Password: pass			Password: pass
+	Username: ADMIN			Username: USER
+	Password: 213123		Password: 213123
 
-6. Add the other user by clicking "Add Friend" button and entering in 
-   their username.
+
 6. Start chatting!
 7. Don't forget to fully express yourself with emojis!
 
