--- a/final/Source Code Package/README
+++ b/final/Source Code Package/README
@@ -26,7 +26,7 @@ Fully-Implemented: Logging in, account authentification, show friend list,
 		Password #1: pass		Password #2: pass
 		
 
-*Refer to /doc/Chat_UserManual.pdf for more in-depth information
+*Refer to /doc/Chat_SoftwareSpec.pdf for more in-depth information
 on the functionalities and corresponding timelines for each functionality.
 
 
